welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:5: error: not found: value avancer
	avancer();
        ^Program:11: error: not found: value reculer
reculer();
^