welcome.lessons.welcome.loopfor.LoopFor.scala.code

var compteur=0
while (compteur<6){
	avancer();
	compteur = compteur + 1
}

while(compteur<6){
prendBiscuit();
reculer();
compteur = compteur - 1
}
